# CO3-skitour-optimization

./: .gitignore  DHM25_subset.asc  DHM25_subset_stantoenien.asc  LICENSE  README.md  SA_avalanche.py  accuracy.py  dijkstra.py  dijkstra_terrain_graph.py  efficacy_robustness.py  load_elevation_data.py  main.py  plot3d_subset.py  plot_comparison_3.py  plot_shortest_path.py  plot_shortest_path_training.py  pyproject.toml  robustness.py  routes_hyperparametertuning.py  sa_training.py  sa_vs_dijk_time_plot.py  simulated_annealing.py  simulated_annealing_a_to_b.py  ski_tour.py  terrain_graph.py  terrain_graph_test.py  terrain_test.asc  time_check_dijkstra_plot.py
GeoData/ASCII_GRID_1part/: dhm25_grid_raster.asc.aux.xml  dhm25_grid_raster.asc.xml
Skitouren/: directroute_chuenihorn.csv  schollberg.csv
data/maps/Skitouren/: hoch_ducan.csv  raetschenhorn.csv  routes_hyperparametertuning.py  sandhubel.csv  ski_tour.py  sulzfluh_abfahrt.csv  sulzfluh_aufstieg.csv
results_csv/: robustness_fixed_params_cross_route.csv  robustness_fixed_params_per_seed.csv  robustness_fixed_params_summary.csv  robustness_results.csv
scripts/: accuracy.py  efficiency.py  plot_comparison_3.py  robustness.py  sa_parameter_search.py  sa_training.py  sa_vs_dijk_time_plot.py
src/skitour/: dijkstra_terrain_graph.py  load_elevation_data.py  simulated_annealing_a_to_b.py  terrain_graph.py
